# clam

./: .gitignore  README.md  create_plugin_ikfast.sh  run_block_detection_action_server.sh
block_grasp_generator/: CMakeLists.txt  package.xml
block_grasp_generator/launch/: grasp_filter_test.launch  grasp_generator_test.launch
block_grasp_generator/src/: block_grasp_generator.cpp  block_grasp_generator_test.cpp  grasp_filter.cpp  grasp_filter_test.cpp  grasp_generator.cpp  grasp_generator_test.cpp
clam_block_manipulation/: CMakeLists.txt  package.xml
clam_block_manipulation/launch/: perception_server.launch  pick_place_moveit_server.launch  pick_place_server.launch  rviz.rviz
clam_block_manipulation/notes/: generate_tf.sh
clam_block_manipulation/src/: block_manipulation_logic.cpp  block_perception_server.cpp  block_pick_place_moveit_server.cpp  block_pick_place_server.cpp  grasp_generator.cpp  grasp_generator.h  point_cloud_lab.cpp  simple_cache.h  simple_cache_test.cpp
clam_bringup/: CMakeLists.txt  package.xml
clam_bringup/bagfiles/: boulder_demo.bag  play_script.sh  record_script.sh
clam_bringup/launch/: clam_vision.launch  lowlevel.launch  lowlevel_simulator.launch  simulation.launch
clam_controller/: CMakeLists.txt  package.xml
clam_controller/config/: clam_controller_configuration.yaml  clam_controller_configuration_sim.yaml  clam_trajectory_controller.yaml  clam_trajectory_controller_sim.yaml
clam_controller/launch/: clam_controller.launch  clam_controller_sim.launch  joint_state_aggregator.launch
clam_controller/nodes/: joint_states_publisher.py.disabled
clam_controller/scripts/: gripper_close.py  gripper_open.py  gripper_test.py  pose_animate.py  pose_cobra.py  pose_jaw.py  pose_sleep.py  pose_zero.py  sequence_play.py  sequence_record.py  set_all_compliance_margin.py  set_all_compliance_slope.py  set_all_torque.py  set_all_velocity.py  show.sh
clam_controller/setup/: 50-usb-serial.rules
clam_controller/src/: clam_arm_action_server.cpp  clam_arm_action_server_DELETE.cpp  clam_gripper_controller.cpp  clam_gripper_controller_test.cpp  clam_gripper_server.cpp  joint_state_aggregator.cpp  test_clam_gripper_controller.cpp
clam_description/: CMakeLists.txt  package.xml
clam_description/obstacles/: Plant.dae  potted_plant.scene
clam_description/stl/: elbow_pitch_link_simple.STL  elbow_roll_link.STL  elbow_roll_link_simple.STL  gripper_base_link.STL  gripper_finger_link.STL  gripper_roll_link.STL  shoulder_pan_link.STL  shoulder_pan_link_simple.STL  shoulder_pitch_link.STL  tabletop_link_simple.STL  wrist_pitch_link_simple.STL
clam_description/urdf/: clam.7dof.xacro  clam.urdf  clam.xacro  extra_links.xarco  round_collada_numbers.py  round_urdf_numbers.py  run_convert_to_collada.sh  run_copy_to_ik_clam.sh  run_gazebo.sh  run_generate_urdf.sh
clam_gazebo/: CMakeLists.txt  clam.world  notes.txt  package.xml
clam_gazebo/config/: clam_gazebo_control.yaml
clam_gazebo/launch/: clam_gazebo_control.launch  clam_world.launch
clam_ik/: create_ikfast_moveit_plugin.py  package.xml
clam_ik/clam_openrave/: arm3.wrl  arm4.wrl  clam.robot.xml  clam.robot.xml.backup  clamHand.robot.xml  clammy.zae  output_ikfast61.cpp  pdArm.robot.xml  pdHand.robot.xml  run_copy_output_to_ik_plugin.sh  run_generate_ikfast.sh  run_show_openrave_links.sh  run_test_openrave.sh  run_test_openrave_show.sh  run_view_openrave.sh  simple.py
clam_ik/models/: ikfastdemo.cpp
clam_ik/rave_experimental/: CMakeCache.txt  Makefile  README_NLP.txt  cmake_install.cmake  mainpage.dox  manifest.xml  readme_openRave.html
clam_ik/scripts/: output_ikfast61.cpp  run_copy_output_to_moveit_plugin.sh  run_generate_ikfast.sh  run_test_openrave.sh  run_test_openrave_show.sh  simple.py
clam_ikfast_arm_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh
clam_ikfast_arm_plugin/src/: clam_arm_ikfast_moveit_plugin.cpp
clam_ikfast_test/: CMakeLists.txt  clam_moveit_ikfast_plugin_description.xml  package.xml
clam_interactive_markers/: CMakeLists.txt
clam_interactive_markers/launch/: arm_markers.launch
clam_interactive_markers/src/: clam_marker_server.cpp
clam_moveit_benchmark/: package.xml
clam_moveit_benchmark/config/: config1.cfg
clam_moveit_benchmark/launch/: clam_benchmark_tool.launch
clam_moveit_experimental/: CMakeLists.txt  package.xml
clam_moveit_experimental/src/: gripper_test.cpp  ik_test.cpp  up_down_test.cpp
clam_moveit_plugins/: CMakeLists.txt  clam_moveit_controller_manager_plugin_description.xml  clam_moveit_ikfast_plugin_description.xml  package.xml
clam_moveit_plugins/clam_moveit_controller_manager/: CMakeLists.txt
clam_moveit_plugins/clam_moveit_ikfast/: CMakeLists.txt
clam_msgs/: CMakeLists.txt  package.xml
clam_msgs/action/: ClamArm.action  ClamGripperCommand.action
clam_pick_place/: CMakeLists.txt  package.xml
clam_pick_place/config/: clam_grasp_data.yaml
clam_pick_place/launch/: pick_place.launch
clam_pick_place/src/: block_pick_place.cpp  random_planning.cpp  simple_pick_place.cpp
clam_vision/: CMakeLists.txt  package.xml
clam_vision/launch/: clam_vision_freenect.launch  clam_vision_openni.launch
clam_vision/src/: calibrate_kinect_checkerboard.cpp
dynamixel_hardware_interface/: CMakeLists.txt  package.xml
dynamixel_hardware_interface/data/: graph_error.m
dynamixel_hardware_interface/example_config/: controller_manager.yaml
dynamixel_hardware_interface/launch/: controller_manager.launch
dynamixel_hardware_interface/python/: CMakeLists.txt  dynamixel_io.cpp
dynamixel_hardware_interface/scripts/: change_id.py  controller_spawner.py  set_servo_config.py
dynamixel_hardware_interface/src/: controller_manager.cpp  dynamixel_io.cpp  joint_position_controller.cpp  joint_trajectory_action_controller.cpp  serial_proxy.cpp
dynamixel_hardware_interface/srv/: LoadController.srv  (+2 more)
dynamixel_simulator_interface/: CMakeLists.txt  controller_plugins.xml
gearbox/: CMakeLists.txt.original  CTestConfig.cmake  aist_python_mt.patch  package.xml
kdlc_kinematics_plugin/: CMakeLists.txt
point_cloud_lab/: CMakeLists.txt
(+1473 files in other folders)
