<package>
  <name>block_grasp_generator</name>
  <version>1.0.0</version>
  <description>block_grasp_generator generates grasps for picking up simple blocks</description>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">http://correll.cs.colorado.edu/clam/</url>
  <url type="bugtracker">https://github.com/davetcoleman/clam/issues</url>
  <url type="repository">https://github.com/davetcoleman/clam</url>

  <author>Dave Coleman</author>

  <build_depend>roscpp</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_core</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_core</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
