<package>
  <name>clam_block_manipulation</name>
  <version>2.0.0</version>
  <description>clam_block_manipulation contains a demo allowing the ClamArm to manipulate blocks on a surface.</description>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">http://correll.cs.colorado.edu/clam/</url>
  <url type="bugtracker">https://github.com/davetcoleman/clam/issues</url>
  <url type="repository">https://github.com/davetcoleman/clam</url>

  <author>Dave Coleman</author>

  <build_depend>roscpp</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>clam_controller</build_depend>
  <build_depend>clam_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>moveit_simple_grasps</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>clam_controller</run_depend>
  <run_depend>clam_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>moveit_simple_grasps</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
