<package>
  <name>clam_gazebo</name>
  <version>0.1.0</version>
  <description>clam_gazebo</description>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>clam_description</run_depend>
  <run_depend>gazebo_ros</run_depend> 
  <run_depend>controller_manager</run_depend>

  <export>
  </export>
</package>
