<?xml version="1.0"?>
<package>
  <name>clam_moveit_experimental</name>
  <version>0.0.0</version>
  <description>Test package for sending simple pose commands to MoveIt</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">http://correll.cs.colorado.edu/clam/</url>
  <url type="bugtracker">https://github.com/davetcoleman/clam/issues</url>
  <url type="repository">https://github.com/davetcoleman/clam</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_warehouse</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>clam_block_manipulation</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>clam_controller</build_depend>
  <build_depend>clam_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_warehouse</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>clam_block_manipulation</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>clam_controller</run_depend>
  <run_depend>clam_msgs</run_depend>

</package>
