<package>
  <name>clam_moveit_plugins</name>
  <version>0.2.1</version>
  <description>Clam specific plugins for MoveIt</description>
  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">http://correll.cs.colorado.edu/clam/</url>
  <url type="bugtracker">https://github.com/davetcoleman/clam/issues</url>
  <url type="repository">https://github.com/davetcoleman/clam</url>

  <build_depend>catkin</build_depend> 
  <build_depend>moveit_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>control_msgs</build_depend> 
  <build_depend>actionlib</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>clam_msgs</build_depend>
  <build_depend>dynamixel_hardware_interface</build_depend>
    
  <run_depend>catkin</run_depend> 
  <run_depend>moveit_core</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>control_msgs</run_depend> 
  <run_depend>actionlib</run_depend> 
  <run_depend>angles</run_depend>
  <run_depend>clam_msgs</run_depend>
  <run_depend>dynamixel_hardware_interface</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <moveit_core plugin="${prefix}/clam_moveit_controller_manager_plugin_description.xml"/> 
    <!--moveit_core plugin="${prefix}/clam_moveit_ikfast_plugin_description.xml"/--> 
  </export>

</package>
