<?xml version="1.0"?>
<package>
  <name>gearbox</name>
  <version>2.0.0</version>
  <description>
    Gearbox provides a collection of usable peer-reviewed
    robotics-related libraries. Gearbox is not an integration
    framework. Rather, it provides a set of implementations,
    without insisting on a standard API, for use by any number
    of existing frameworks.
  </description>

  <author>Geoffrey Biggs, Alex Makarenko</author>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/gearbox</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <cpp cflags="-I${prefix}/gearbox/include" lflags="-L${prefix}/gearbox/lib64/gearbox -Wl,-rpath,${prefix}/gearbox/lib64/gearbox -lflexiport -L${prefix}/gearbox/lib -Wl,-rpath,${prefix}/gearbox/lib"/>
  </export>
</package>


